# projet_s1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/game/: Game.cpp  Game.h
src/ia/: IA.cpp  IA.h
src/player/: Player.cpp  Player.h
src/utils/: utils.cpp  utils.h
